      - Advanced gas refinery 4
      - Biter refugium 3
      - Leaching plant 4
      - Ore refinery 3
    - Adjusted the ingredient tiers for the folllowing structures to eliminate a tier gap:
      - Algae farm 5
      - Hydro plant 4
    - All T5 and T6 buildings should now use Titanium concrete bricks
---------------------------------------------------------------------------------------------------
Version: 0.5.9
Date: 2023-04-06
  Bugfixes:
    - Fixed that in expensive recipe mode, Washing plant 2 was an ingredient in Washing plant 4
    - Fixed that the upgrade planner would downgrade Salination plant 3, Advanced chemical plant 3, Air filter 4, Washing plant 4, and Hydro plant 4 to a previous tier
  Locale:
    - Added localization for Japanese
---------------------------------------------------------------------------------------------------
Version: 0.5.8
Date: 2023-01-01
  Changes:
    - Adjusted the ingredients tiers for the following structures to align with changes to Angel's Bioprocessing in version 0.7.23
      - Oil press 2/3 ingredients increased from tiers 2/3 to tiers 3/4
      - Butchery 2/3 ingredients increased from tiers 2/3 to tiers 3/4
      - Basic farm 2/3 ingredients increased from tiers 1/2 to tiers 2/3
      - Desert, Swamp, and Temperate farm 2/3 ingredients increased from tiers 3/4 to tiers 4/5
      - Hatchery 2/3 ingredients increased from tiers 2/3 to tiers 4/5
      - Nutrient extractor 2/3 ingredients increased from tiers 2/3 to tiers 3/4
      - Fish tank 2/3 ingredients increased from tiers 2/3 to tiers 3/4
    - Moved Seed extractor 2 and 3 unlocks into technologies Garden Processing 2 and 3 respectively
    - Moved Desert, Swamp, and Temperate farm 2 unlocks into their respective Farming 2 technologies
    - Removed technology "Advanced farm upgrades 2", and moved Desert, Swamp and Temperate farm 3 unlocks into "Advanced farm upgrades"
    - Minimum version of Angel's Bioprocessing has been incremented to version 0.7.23